# AILoadPredictor2

./: ..replit.2382406993~  .replit  CLAUDE.md  Untitled-1.ipynb  app.py  app_simplified.py  pyproject.toml  readme.md  requirements.txt  setup_database.py
agents/: coordinating_agent.py  data_processing_agent.py  eda_agent.py  forecasting_agent.py  model_deployment_agent.py  model_verification_agent.py  modeling_agent.py  visualization_agent.py
attached_assets/: Pasted-AI-Agent-Based-Load-Forecasting-System-Architecture-Design-1-Overview-This-document-outlines-the-1747609839200.txt  Pasted-TypeError-Unable-to-convert-function-return-value-to-a-Python-type-The-signature-was-handle--1747610881914.txt
data/: sample_daily_load.csv  sample_hourly_load.csv
notebooks/: agent_validation.ipynb  notebook-1.ipynb  prompts.txt
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/768951295870753700/: meta.yaml
notebooks/mlruns/768951295870753700/4d8d7aa2deb1462497bd80e4ef33de07/: meta.yaml
notebooks/mlruns/768951295870753700/4d8d7aa2deb1462497bd80e4ef33de07/params/: features
notebooks/mlruns/768951295870753700/4d8d7aa2deb1462497bd80e4ef33de07/tags/: mlflow.source.name
notebooks/mlruns/977498805240248288/: meta.yaml
notebooks/mlruns/977498805240248288/f4432cce857d4f2f95b9e745acfb5a80/: meta.yaml
notebooks/mlruns/997863185788307872/: meta.yaml
notebooks/mlruns/997863185788307872/808a749cb4ce45d5bb585986e22a12e6/: meta.yaml
utils/: create_sample_data.py  data_utils.py  db_manager.py  db_utils.py
